Fix spacing bewteen navbar and jumbotron

--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ body {
 .jumbotron {
     text-align: center;
     padding: 10px;
-    margin-top: 20px;
+    margin-top: 80px;
 }
 
 /* ABOUT ME */
